# mpan

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  catalog-info.yaml  index.html  mkdocs.yml  mpan.py  pyproject.toml  sitemap.xml  techdocs_metadata.json
.github/: pull_request_template.md
.github/workflows/: documentation.yaml  lint_and_test.yaml
changelog/: index.html
development/: index.html
docs/: changelog.md  development.md  generation.md  index.md  installation.md  parsing.md  validation.md
generation/: index.html
installation/: index.html
mpan/: __init__.py  common.py  data.py  distributor.py  exceptions.py  helpers.py  meter_time_switch_code.py  mpan.py  profile_class.py
mpan/generation/: faker.py  helpers.py  mimesis.py
parsing/: index.html
scripts/: generate-databases.py
search/: search_index.json
tests/: common.py  test_distributor.py  test_faker.py  test_helpers.py  test_meter_time_switch_code.py  test_mimesis.py  test_mpan.py  test_profile_class.py
validation/: index.html
