[tool.poetry]
name = "mpan"
version = "1.0.2"
description = "A parsing library for the UK's MPAN energy standard"
authors = ["Limejump Developers <opensource@limejump.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/limejump/mpan"
repository = "https://github.com/limejump/mpan"
documentation = "https://github.com/limejump/mpan"


[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
ipython = "^7.20.0"
pre-commit = "^2.10.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.0"


[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*", ".venv/*"]


[tool.coverage.report]
ignore_errors = true
omit = [
]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError"
]


[tool.isort]
atomic = true
multi_line_output = 3
case_sensitive = true
lines_after_imports = 2
lines_between_types = 1
combine_as_imports = true
default_section = "THIRDPARTY"
line_length = 79
include_trailing_comma = true
sections=[
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]


[tool.black]
line-length = 79
target-version = ["py38"]
include = '\.pyi?$'
exclude = '/(\.eggs|\.git|_build|build|dist)/'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
